--- a/about.html
+++ b/about.html
@@ -12,9 +12,7 @@
 <body>
     <div class="container pt-5 pb-5 mb-5">
         <div class="row mb-5">
-            <div class="col-sm-5">
-                
-            </div>
+            <div class="col-sm-5"></div>
             <div class="col-sm-2">
                 <h4>Welcome</h4>
             </div>
